@@ -2,7 +2,7 @@ DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r4-3.14.patch1 3345 SHA256 
 DIST 0002-block-introduce-the-BFQ-v7r4-I-O-sched-for-3.14.patch1 207650 SHA256 44bf375b24bc591ffb486f8c6ff65e120de3f9400f34d834d226860c0bc94cd6 SHA512 3e8be83133b4bc4399d1f065f3d8f7a9978016c9ed9945d10acae264fd6b301246f7bfbc93e46e4bd72fef4386614202e1bba10ecb66ad2e6451ee1bba0ce302 WHIRLPOOL 59f37deec5397a23069563a7cb5187dc4e1c7fe1393c34234cef8ceb15fa27108a5466cbd629d46fc9f6f682012c7e22e89246ccd3040b206536d6661913edf4
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r4-for-3.14.0.patch1 35996 SHA256 09f3514d2db9ef6ab3e13de9289b1a8952f91391dfa5d07ede7e8c9aeae9a7a0 SHA512 b62f1c765766d77c050cc471abaf6ba25617866f71e6b1c4581d0712bde3eb4c74f4552e7a6045a27f921b76a738a2be76d3bcefd65db39d77e965e3997f6378 WHIRLPOOL 11622b8f068f43cee028b44ff34eca58bcc0a3843c851f30c823067a87faea40e56bb70cbc6616c7399775d6230c5583728a61dc0c23504f221052678c955bb6
 DIST README-3.14.4.BFQ 20007 SHA256 7fb4fb92d7af3f90dd31815b6c1f94cd75a1076944262e43a9013302e8ebc222 SHA512 78600cef57d77063b831eb4c8734f069f07b4a828d73e8167b9a50cdeb9113fde4f58ba715e93b0f4d6d2eaa8327cb7155d399c592ee6b4d808d2e6d8199e46f WHIRLPOOL 7f210adec00234e0466a88870eca08ccd618c449c6934fc7dc35e9add712c83a918a3ad76af86b393998f53ebeea1774caada96fe92df904227ab9dd8d0ea50a
-DIST aufs-sources-3.14_p20140526.tar.xz 156056 SHA256 69ac032a881e2951ee28e0481a6c0c62c3082881a57e4ea30726c21e282c5bf0 SHA512 9ab1af717da5a1e02912f298330824a365e4fa48015e7704b06f637f8bcce6d666f790f5d74d1dd4b5f32b74ee240d3a2fc8564ef1d1763de8b245ce0a7dd1bc WHIRLPOOL 46b09846b8a6eec09a2f24f127adba6b2f4c38fc78c2fa31bb20fa2c6b6346923187456b9fa780ca3298fc550f25ac5f901e06fb4982d461e287f057eabd6cbb
+DIST aufs-sources-3.14_p20140602.tar.xz 156776 SHA256 b59489f10d6ece7311a8704e4c0006318702a97cf5701f65b21a672dc099e5f1 SHA512 1f4b2f821590f895296a09e67e4ce14ea35d7d9420fbaa813554b9fdbdea1beb8b8bdc50a79c09db95e1f25ff9b5315b1b0dc20af275ff79b6b5d5d6b46d13a1 WHIRLPOOL 4159d518c42941f9e52831cab82f675fbd481b972cacddca6befd865bdafc8fac02931ec7e420889e63e2a880d136d28324300f048281add5664151dec41b641
 DIST deblob-3.14 121249 SHA256 980400e0db952ccdb5a507f99444330af893ed0f8a7a052916fcf0c2b2631f7e SHA512 2cbdf4f3947c12ade0931f0b3fb8b9c0312626a3bfea9d1c7d8d1d875b4673624ed3a6369653521998bbea0cde6730b573d6be918d052f1b553e093cb42a838f WHIRLPOOL 7ba1738ac829d8848104843da6237576f235c0151d53944ff3a7e0308cfb91600ffb9253402a34c2ed106c5b0bb3ce36785ead990396465341a957c58319221c
 DIST deblob-check-3.14 613747 SHA256 e1d5ced14e38fd415eb5a9a50e180cfdc63b2d0f0350a6d36645b82ef0351304 SHA512 f5901a7c41db34ea3c29e6c6f6fa1afacf4edca1cfad901599b982fd66b5ce3894aa9075b5d15b7a8a6c9694833752fb609d98889b5de39ab59aea7d024a740b WHIRLPOOL 5064bf7423a4703a976b4342da5b3cef65584ee701462e261398170b3e5189036327e114deb15a29ded79541dbe084fa86b08b8c293d4585614ac09f791d7f60
 DIST genpatches-3.14-7.base.tar.xz 107436 SHA256 256ebd7b3e980bf8d2ed4b8e71a7d66cb2c4b8f8bfbd29f28dd26210609b46fa SHA512 2a86abde63388c694352f02590c98121548dc2fde581ad8dce305e262e895a3b7ae2003b96d3f3b1af7d764aef566ad920b034c28b4f758fe8259b25bd612056 WHIRLPOOL 6d8b2fe444cd89490824fac837b523a0a046610f71fdf5690b40aaa89775be2e2d46c6e62b3b206dccb9d68c892eeda9000feb8c1f971a11ad1e42a3173650f7
