@@ -1,5 +1,8 @@
 
 
+  02 Jun 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.14.4.ebuild:
+  Bump to latest aufs3 release, install additional patches
+
   26 May 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.14.4.ebuild,
   +files/README.gentoo:
   Bump to latest aufs3 release, install additional patches
